// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app tests clicking on the check icon in move mode saves the changes 1`] = `
<div>
  <div
    class="app-container"
  >
    <div>
      <div
        class="no-user-select"
      >
        <div
          class="section-row false"
        >
          <span>
            <span />
             
          </span>
        </div>
      </div>
      <div
        class="headline-row false"
        data-testid="headline"
        level="1"
      >
        <div
          class="headline-row-item"
        >
          <div>
            <div
              class="headline-star"
            >
              <svg
                height="16px"
                width="16px"
              >
                <circle
                  cx="50%"
                  cy="50%"
                  r="4px"
                />
              </svg>
            </div>
          </div>
          <div
            class="headline-content"
          >
            <div
              class="no-user-select"
            >
              <span>
                <span>
                  Great Unix Tools
                </span>
                 
              </span>
            </div>
            <div>
              <div
                class="headline-row false"
                data-testid="headline"
                level="2"
              >
                <div
                  class="headline-row-item"
                >
                  <div>
                    <div
                      class="headline-star"
                    >
                      <svg
                        height="16px"
                        width="16px"
                      >
                        <circle
                          cx="50%"
                          cy="50%"
                          r="4px"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    class="headline-content"
                  >
                    <div
                      class="no-user-select"
                    >
                      <span>
                        <span>
                          rsync
                        </span>
                         
                      </span>
                    </div>
                    <div>
                      <div
                        class="no-user-select"
                      >
                        <div
                          class="section-row false"
                        >
                          <span>
                            <span>
                              Copy a file with a progress bar
                            </span>
                             
                          </span>
                        </div>
                      </div>
                      <div
                        class="no-user-select"
                      >
                        <div
                          class="section-row false"
                        >
                          <span>
                            <span>
                              sudo rsync --info=progress2 source dest
                            </span>
                             
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="headline-dashplus"
                  >
                    <svg
                      height="16"
                      title="dash-collapse"
                      width="16"
                    >
                      <line
                        stroke="black"
                        stroke-width="1.5"
                        x1="8"
                        x2="16"
                        y1="8"
                        y2="8"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <div
                class="headline-row false"
                data-testid="headline"
                level="2"
              >
                <div
                  class="headline-row-item"
                >
                  <div>
                    <div
                      class="headline-star"
                    >
                      <svg
                        height="16px"
                        width="16px"
                      >
                        <circle
                          cx="50%"
                          cy="50%"
                          r="4px"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    class="headline-content"
                  >
                    <div
                      class="no-user-select"
                    >
                      <span>
                        <span>
                          du - disk usage
                        </span>
                         
                      </span>
                    </div>
                    <div>
                      <div
                        class="no-user-select"
                      >
                        <div
                          class="section-row false"
                        >
                          <span>
                            <span>
                              du -sh file_path
                            </span>
                             
                          </span>
                        </div>
                      </div>
                      <div
                        class="no-user-select"
                      >
                        <div
                          class="section-row false"
                        >
                          <span>
                            <span>
                              -s : summarized
                            </span>
                             
                          </span>
                        </div>
                      </div>
                      <div
                        class="no-user-select"
                      >
                        <div
                          class="section-row false"
                        >
                          <span>
                            <span>
                              -h : human readable
                            </span>
                             
                          </span>
                          <span>
                            <a
                              href="https://test.com"
                            >
                              https://test.com
                            </a>
                             
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="headline-dashplus"
                  >
                    <svg
                      height="16"
                      title="dash-collapse"
                      width="16"
                    >
                      <line
                        stroke="black"
                        stroke-width="1.5"
                        x1="8"
                        x2="16"
                        y1="8"
                        y2="8"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <div
                class="headline-row highlight"
                data-testid="headline"
                level="2"
              >
                <div
                  class="headline-row-item"
                >
                  <div>
                    <div
                      class="headline-star"
                    >
                      <svg
                        height="16px"
                        width="16px"
                      >
                        <circle
                          cx="50%"
                          cy="50%"
                          fill="brown"
                          r="4px"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    class="headline-content"
                  >
                    <div
                      class="no-user-select"
                    >
                      <span>
                        <span>
                          pacman
                        </span>
                         
                      </span>
                    </div>
                    <div>
                      <div
                        class="no-user-select"
                      >
                        <div
                          class="section-row highlight"
                        >
                          <span>
                            <span>
                              search pacman
                            </span>
                             
                          </span>
                        </div>
                      </div>
                      <div
                        class="no-user-select"
                      >
                        <div
                          class="section-row highlight"
                        >
                          <span>
                            <span>
                              - sudo pacman -Ss package_name
                            </span>
                             
                          </span>
                        </div>
                      </div>
                      <div
                        class="no-user-select"
                      >
                        <div
                          class="section-row highlight"
                        >
                          <span>
                            <span />
                             
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="headline-dashplus"
                  >
                    <svg
                      height="16"
                      title="dash-collapse"
                      width="16"
                    >
                      <line
                        stroke="black"
                        stroke-width="1.5"
                        x1="8"
                        x2="16"
                        y1="8"
                        y2="8"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="headline-dashplus"
          >
            <svg
              height="16"
              title="dash-collapse"
              width="16"
            >
              <line
                stroke="black"
                stroke-width="1.5"
                x1="8"
                x2="16"
                y1="8"
                y2="8"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="movemode-container"
    >
      <div
        class="movemode-button"
      >
        <button
          class="MuiButtonBase-root MuiFab-root MuiFab-primary"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiFab-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              role="presentation"
              title="promote-note"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class="movemode-button"
      >
        <button
          class="MuiButtonBase-root MuiFab-root MuiFab-primary"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiFab-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              role="presentation"
              title="demote-note"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class="movemode-button"
      >
        <button
          class="MuiButtonBase-root MuiFab-root MuiFab-primary"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiFab-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              role="presentation"
              title="move-note-up"
              viewBox="0 0 24 24"
            >
              <path
                d="M4 12l1.41 1.41L11 7.83V20h2V7.83l5.58 5.59L20 12l-8-8-8 8z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class="movemode-button"
      >
        <button
          class="MuiButtonBase-root MuiFab-root MuiFab-primary"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiFab-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              role="presentation"
              title="move-note-down"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>
  <button
    aria-label="Add"
    class="mdc-fab"
    title="Add"
  >
    <i
      class="mdc-fab__icon material-icons mdc-fab-icon"
    >
      add
    </i>
  </button>
  <div
    class="mdc-bottom-app-bar__fab mdc-bottom-app-bar__fab--center-cut mdc-fab material-icons"
  />
  <div
    class="mdc-bottom-app-bar__row"
  >
    <div
      class="mdc-bottom-app-bar__section mdc-bottom-app-bar__section--space-around"
    >
      <div>
        <i
          aria-label="Menu"
          class="material-icons mdc-bottom-app-bar-icon"
          title="toggle-file-explorer"
        >
          menu
        </i>
      </div>
      <div>
        <i
          class="material-icons mdc-bottom-app-bar-icon"
        >
          search
        </i>
      </div>
      <div>
        <i
          class="material-icons mdc-bottom-app-bar-icon"
        >
          calendar_today
        </i>
      </div>
      <div>
        <i
          class="material-icons mdc-bottom-app-bar-icon"
          title="SettingsIcon"
        >
          settings
        </i>
      </div>
      <div
        class="mdc-bottom-app-bar-text"
        data-testid="filename-titlebar"
      >
        test1
      </div>
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root topbar-icon"
        focusable="false"
        role="presentation"
        title="move-mode-save"
        viewBox="0 0 24 24"
      >
        <path
          d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
        />
      </svg>
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root topbar-icon"
        focusable="false"
        role="presentation"
        title="move-mode-cancel"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`app tests clicking on the x icon in move mode restores the text to the previous state 1`] = `
<div>
  <div
    class="app-container"
  >
    <div>
      <div
        class="no-user-select"
      >
        <div
          class="section-row undefined"
        >
          <span>
            <span />
             
          </span>
        </div>
      </div>
      <div
        class="headline-row undefined"
        data-testid="headline"
        level="1"
      >
        <div
          class="headline-row-item"
        >
          <div>
            <div
              class="headline-star"
            >
              <svg
                height="16px"
                width="16px"
              >
                <circle
                  cx="50%"
                  cy="50%"
                  r="4px"
                />
              </svg>
            </div>
          </div>
          <div
            class="headline-content"
          >
            <div
              class="no-user-select"
            >
              <span>
                <span>
                  Great Unix Tools
                </span>
                 
              </span>
            </div>
            <div>
              <div
                class="headline-row undefined"
                data-testid="headline"
                level="2"
              >
                <div
                  class="headline-row-item"
                >
                  <div>
                    <div
                      class="headline-star"
                    >
                      <svg
                        height="16px"
                        width="16px"
                      >
                        <circle
                          cx="50%"
                          cy="50%"
                          r="4px"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    class="headline-content"
                  >
                    <div
                      class="no-user-select"
                    >
                      <span>
                        <span>
                          rsync
                        </span>
                         
                      </span>
                    </div>
                    <div>
                      <div
                        class="no-user-select"
                      >
                        <div
                          class="section-row undefined"
                        >
                          <span>
                            <span>
                              Copy a file with a progress bar
                            </span>
                             
                          </span>
                        </div>
                      </div>
                      <div
                        class="no-user-select"
                      >
                        <div
                          class="section-row undefined"
                        >
                          <span>
                            <span>
                              sudo rsync --info=progress2 source dest
                            </span>
                             
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="headline-dashplus"
                  >
                    <svg
                      height="16"
                      title="dash-collapse"
                      width="16"
                    >
                      <line
                        stroke="black"
                        stroke-width="1.5"
                        x1="8"
                        x2="16"
                        y1="8"
                        y2="8"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <div
                class="headline-row undefined"
                data-testid="headline"
                level="2"
              >
                <div
                  class="headline-row-item"
                >
                  <div>
                    <div
                      class="headline-star"
                    >
                      <svg
                        height="16px"
                        width="16px"
                      >
                        <circle
                          cx="50%"
                          cy="50%"
                          r="4px"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    class="headline-content"
                  >
                    <div
                      class="no-user-select"
                    >
                      <span>
                        <span>
                          du - disk usage
                        </span>
                         
                      </span>
                    </div>
                    <div>
                      <div
                        class="no-user-select"
                      >
                        <div
                          class="section-row undefined"
                        >
                          <span>
                            <span>
                              du -sh file_path
                            </span>
                             
                          </span>
                        </div>
                      </div>
                      <div
                        class="no-user-select"
                      >
                        <div
                          class="section-row undefined"
                        >
                          <span>
                            <span>
                              -s : summarized
                            </span>
                             
                          </span>
                        </div>
                      </div>
                      <div
                        class="no-user-select"
                      >
                        <div
                          class="section-row undefined"
                        >
                          <span>
                            <span>
                              -h : human readable
                            </span>
                             
                          </span>
                          <span>
                            <a
                              href="https://test.com"
                            >
                              https://test.com
                            </a>
                             
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="headline-dashplus"
                  >
                    <svg
                      height="16"
                      title="dash-collapse"
                      width="16"
                    >
                      <line
                        stroke="black"
                        stroke-width="1.5"
                        x1="8"
                        x2="16"
                        y1="8"
                        y2="8"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <div
                class="headline-row undefined"
                data-testid="headline"
                level="2"
              >
                <div
                  class="headline-row-item"
                >
                  <div>
                    <div
                      class="headline-star"
                    >
                      <svg
                        height="16px"
                        width="16px"
                      >
                        <circle
                          cx="50%"
                          cy="50%"
                          r="4px"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    class="headline-content"
                  >
                    <div
                      class="no-user-select"
                    >
                      <span>
                        <span>
                          pacman
                        </span>
                         
                      </span>
                    </div>
                    <div>
                      <div
                        class="no-user-select"
                      >
                        <div
                          class="section-row undefined"
                        >
                          <span>
                            <span>
                              search pacman
                            </span>
                             
                          </span>
                        </div>
                      </div>
                      <div
                        class="no-user-select"
                      >
                        <div
                          class="section-row undefined"
                        >
                          <span>
                            <span>
                              - sudo pacman -Ss package_name
                            </span>
                             
                          </span>
                        </div>
                      </div>
                      <div
                        class="no-user-select"
                      >
                        <div
                          class="section-row undefined"
                        >
                          <span>
                            <span />
                             
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="headline-dashplus"
                  >
                    <svg
                      height="16"
                      title="dash-collapse"
                      width="16"
                    >
                      <line
                        stroke="black"
                        stroke-width="1.5"
                        x1="8"
                        x2="16"
                        y1="8"
                        y2="8"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="headline-dashplus"
          >
            <svg
              height="16"
              title="dash-collapse"
              width="16"
            >
              <line
                stroke="black"
                stroke-width="1.5"
                x1="8"
                x2="16"
                y1="8"
                y2="8"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    aria-label="Add"
    class="mdc-fab"
    title="Add"
  >
    <i
      class="mdc-fab__icon material-icons mdc-fab-icon"
    >
      add
    </i>
  </button>
  <div
    class="mdc-bottom-app-bar__fab mdc-bottom-app-bar__fab--center-cut mdc-fab material-icons"
  />
  <div
    class="mdc-bottom-app-bar__row"
  >
    <div
      class="mdc-bottom-app-bar__section mdc-bottom-app-bar__section--space-around"
    >
      <div>
        <i
          aria-label="Menu"
          class="material-icons mdc-bottom-app-bar-icon"
          title="toggle-file-explorer"
        >
          menu
        </i>
      </div>
      <div>
        <i
          class="material-icons mdc-bottom-app-bar-icon"
        >
          search
        </i>
      </div>
      <div>
        <i
          class="material-icons mdc-bottom-app-bar-icon"
        >
          calendar_today
        </i>
      </div>
      <div>
        <i
          class="material-icons mdc-bottom-app-bar-icon"
          title="SettingsIcon"
        >
          settings
        </i>
      </div>
      <div
        class="mdc-bottom-app-bar-text"
        data-testid="filename-titlebar"
      >
        test1
      </div>
    </div>
  </div>
</div>
`;

exports[`app tests enables move mode when clicking on the move item option 1`] = `
<div>
  <div
    class="app-container"
  >
    <div>
      <div
        class="no-user-select"
      >
        <div
          class="section-row false"
        >
          <span>
            <span />
             
          </span>
        </div>
      </div>
      <div
        class="headline-row false"
        data-testid="headline"
        level="1"
      >
        <div
          class="headline-row-item"
        >
          <div>
            <div
              class="headline-star"
            >
              <svg
                height="16px"
                width="16px"
              >
                <circle
                  cx="50%"
                  cy="50%"
                  r="4px"
                />
              </svg>
            </div>
          </div>
          <div
            class="headline-content"
          >
            <div
              class="no-user-select"
            >
              <span>
                <span>
                  Great Unix Tools
                </span>
                 
              </span>
            </div>
            <div>
              <div
                class="headline-row false"
                data-testid="headline"
                level="2"
              >
                <div
                  class="headline-row-item"
                >
                  <div>
                    <div
                      class="headline-star"
                    >
                      <svg
                        height="16px"
                        width="16px"
                      >
                        <circle
                          cx="50%"
                          cy="50%"
                          r="4px"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    class="headline-content"
                  >
                    <div
                      class="no-user-select"
                    >
                      <span>
                        <span>
                          rsync
                        </span>
                         
                      </span>
                    </div>
                    <div>
                      <div
                        class="no-user-select"
                      >
                        <div
                          class="section-row false"
                        >
                          <span>
                            <span>
                              Copy a file with a progress bar
                            </span>
                             
                          </span>
                        </div>
                      </div>
                      <div
                        class="no-user-select"
                      >
                        <div
                          class="section-row false"
                        >
                          <span>
                            <span>
                              sudo rsync --info=progress2 source dest
                            </span>
                             
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="headline-dashplus"
                  >
                    <svg
                      height="16"
                      title="dash-collapse"
                      width="16"
                    >
                      <line
                        stroke="black"
                        stroke-width="1.5"
                        x1="8"
                        x2="16"
                        y1="8"
                        y2="8"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <div
                class="headline-row false"
                data-testid="headline"
                level="2"
              >
                <div
                  class="headline-row-item"
                >
                  <div>
                    <div
                      class="headline-star"
                    >
                      <svg
                        height="16px"
                        width="16px"
                      >
                        <circle
                          cx="50%"
                          cy="50%"
                          r="4px"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    class="headline-content"
                  >
                    <div
                      class="no-user-select"
                    >
                      <span>
                        <span>
                          du - disk usage
                        </span>
                         
                      </span>
                    </div>
                    <div>
                      <div
                        class="no-user-select"
                      >
                        <div
                          class="section-row false"
                        >
                          <span>
                            <span>
                              du -sh file_path
                            </span>
                             
                          </span>
                        </div>
                      </div>
                      <div
                        class="no-user-select"
                      >
                        <div
                          class="section-row false"
                        >
                          <span>
                            <span>
                              -s : summarized
                            </span>
                             
                          </span>
                        </div>
                      </div>
                      <div
                        class="no-user-select"
                      >
                        <div
                          class="section-row false"
                        >
                          <span>
                            <span>
                              -h : human readable
                            </span>
                             
                          </span>
                          <span>
                            <a
                              href="https://test.com"
                            >
                              https://test.com
                            </a>
                             
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="headline-dashplus"
                  >
                    <svg
                      height="16"
                      title="dash-collapse"
                      width="16"
                    >
                      <line
                        stroke="black"
                        stroke-width="1.5"
                        x1="8"
                        x2="16"
                        y1="8"
                        y2="8"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <div
                class="headline-row highlight"
                data-testid="headline"
                level="2"
              >
                <div
                  class="headline-row-item"
                >
                  <div>
                    <div
                      class="headline-star"
                    >
                      <svg
                        height="16px"
                        width="16px"
                      >
                        <circle
                          cx="50%"
                          cy="50%"
                          fill="brown"
                          r="4px"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    class="headline-content"
                  >
                    <div
                      class="no-user-select"
                    >
                      <span>
                        <span>
                          pacman
                        </span>
                         
                      </span>
                    </div>
                    <div>
                      <div
                        class="no-user-select"
                      >
                        <div
                          class="section-row highlight"
                        >
                          <span>
                            <span>
                              search pacman
                            </span>
                             
                          </span>
                        </div>
                      </div>
                      <div
                        class="no-user-select"
                      >
                        <div
                          class="section-row highlight"
                        >
                          <span>
                            <span>
                              - sudo pacman -Ss package_name
                            </span>
                             
                          </span>
                        </div>
                      </div>
                      <div
                        class="no-user-select"
                      >
                        <div
                          class="section-row highlight"
                        >
                          <span>
                            <span />
                             
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="headline-dashplus"
                  >
                    <svg
                      height="16"
                      title="dash-collapse"
                      width="16"
                    >
                      <line
                        stroke="black"
                        stroke-width="1.5"
                        x1="8"
                        x2="16"
                        y1="8"
                        y2="8"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="headline-dashplus"
          >
            <svg
              height="16"
              title="dash-collapse"
              width="16"
            >
              <line
                stroke="black"
                stroke-width="1.5"
                x1="8"
                x2="16"
                y1="8"
                y2="8"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="movemode-container"
    >
      <div
        class="movemode-button"
      >
        <button
          class="MuiButtonBase-root MuiFab-root MuiFab-primary"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiFab-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              role="presentation"
              title="promote-note"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class="movemode-button"
      >
        <button
          class="MuiButtonBase-root MuiFab-root MuiFab-primary"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiFab-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              role="presentation"
              title="demote-note"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class="movemode-button"
      >
        <button
          class="MuiButtonBase-root MuiFab-root MuiFab-primary"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiFab-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              role="presentation"
              title="move-note-up"
              viewBox="0 0 24 24"
            >
              <path
                d="M4 12l1.41 1.41L11 7.83V20h2V7.83l5.58 5.59L20 12l-8-8-8 8z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class="movemode-button"
      >
        <button
          class="MuiButtonBase-root MuiFab-root MuiFab-primary"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiFab-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              role="presentation"
              title="move-note-down"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>
  <button
    aria-label="Add"
    class="mdc-fab"
    title="Add"
  >
    <i
      class="mdc-fab__icon material-icons mdc-fab-icon"
    >
      add
    </i>
  </button>
  <div
    class="mdc-bottom-app-bar__fab mdc-bottom-app-bar__fab--center-cut mdc-fab material-icons"
  />
  <div
    class="mdc-bottom-app-bar__row"
  >
    <div
      class="mdc-bottom-app-bar__section mdc-bottom-app-bar__section--space-around"
    >
      <div>
        <i
          aria-label="Menu"
          class="material-icons mdc-bottom-app-bar-icon"
          title="toggle-file-explorer"
        >
          menu
        </i>
      </div>
      <div>
        <i
          class="material-icons mdc-bottom-app-bar-icon"
        >
          search
        </i>
      </div>
      <div>
        <i
          class="material-icons mdc-bottom-app-bar-icon"
        >
          calendar_today
        </i>
      </div>
      <div>
        <i
          class="material-icons mdc-bottom-app-bar-icon"
          title="SettingsIcon"
        >
          settings
        </i>
      </div>
      <div
        class="mdc-bottom-app-bar-text"
        data-testid="filename-titlebar"
      >
        test1
      </div>
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root topbar-icon"
        focusable="false"
        role="presentation"
        title="move-mode-save"
        viewBox="0 0 24 24"
      >
        <path
          d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
        />
      </svg>
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root topbar-icon"
        focusable="false"
        role="presentation"
        title="move-mode-cancel"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`app tests renders the component with the correct headlines and collapses the topmost headline 1`] = `
<div>
  <div
    class="app-container"
  >
    <div>
      <div
        class="no-user-select"
      >
        <div
          class="section-row undefined"
        >
          <span>
            <span />
             
          </span>
        </div>
      </div>
      <div
        class="headline-row undefined"
        data-testid="headline"
        level="1"
      >
        <div
          class="headline-row-item"
        >
          <div>
            <div
              class="headline-star"
            >
              <svg
                height="16px"
                width="16px"
              >
                <circle
                  cx="50%"
                  cy="50%"
                  r="4px"
                />
              </svg>
            </div>
          </div>
          <div
            class="headline-content"
          >
            <div
              class="no-user-select"
            >
              <span>
                <span>
                  Great Unix Tools
                </span>
                 
              </span>
            </div>
            <div>
              <div
                class="headline-row undefined"
                data-testid="headline"
                level="2"
              >
                <div
                  class="headline-row-item"
                >
                  <div>
                    <div
                      class="headline-star"
                    >
                      <svg
                        height="16px"
                        width="16px"
                      >
                        <circle
                          cx="50%"
                          cy="50%"
                          fill="#e1e1e1"
                          r="8px"
                        />
                        <circle
                          cx="50%"
                          cy="50%"
                          r="4px"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    class="headline-content"
                  >
                    <div
                      class="no-user-select"
                    >
                      <span>
                        <span>
                          rsync
                        </span>
                         
                      </span>
                    </div>
                    <div />
                  </div>
                  <div
                    class="headline-dashplus"
                  >
                    <svg
                      height="16"
                      title="plus-expand"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <line
                        stroke="black"
                        stroke-width="1.5"
                        x1="8"
                        x2="16"
                        y1="8"
                        y2="8"
                      />
                      <line
                        stroke="black"
                        stroke-width="1.5"
                        x1="12"
                        x2="12"
                        y1="4"
                        y2="12"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <div
                class="headline-row undefined"
                data-testid="headline"
                level="2"
              >
                <div
                  class="headline-row-item"
                >
                  <div>
                    <div
                      class="headline-star"
                    >
                      <svg
                        height="16px"
                        width="16px"
                      >
                        <circle
                          cx="50%"
                          cy="50%"
                          r="4px"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    class="headline-content"
                  >
                    <div
                      class="no-user-select"
                    >
                      <span>
                        <span>
                          du - disk usage
                        </span>
                         
                      </span>
                    </div>
                    <div>
                      <div
                        class="no-user-select"
                      >
                        <div
                          class="section-row undefined"
                        >
                          <span>
                            <span>
                              du -sh file_path
                            </span>
                             
                          </span>
                        </div>
                      </div>
                      <div
                        class="no-user-select"
                      >
                        <div
                          class="section-row undefined"
                        >
                          <span>
                            <span>
                              -s : summarized
                            </span>
                             
                          </span>
                        </div>
                      </div>
                      <div
                        class="no-user-select"
                      >
                        <div
                          class="section-row undefined"
                        >
                          <span>
                            <span>
                              -h : human readable
                            </span>
                             
                          </span>
                          <span>
                            <a
                              href="https://test.com"
                            >
                              https://test.com
                            </a>
                             
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="headline-dashplus"
                  >
                    <svg
                      height="16"
                      title="dash-collapse"
                      width="16"
                    >
                      <line
                        stroke="black"
                        stroke-width="1.5"
                        x1="8"
                        x2="16"
                        y1="8"
                        y2="8"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <div
                class="headline-row undefined"
                data-testid="headline"
                level="2"
              >
                <div
                  class="headline-row-item"
                >
                  <div>
                    <div
                      class="headline-star"
                    >
                      <svg
                        height="16px"
                        width="16px"
                      >
                        <circle
                          cx="50%"
                          cy="50%"
                          fill="#e1e1e1"
                          r="8px"
                        />
                        <circle
                          cx="50%"
                          cy="50%"
                          r="4px"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    class="headline-content"
                  >
                    <div
                      class="no-user-select"
                    >
                      <span>
                        <span>
                          pacman
                        </span>
                         
                      </span>
                    </div>
                    <div />
                  </div>
                  <div
                    class="headline-dashplus"
                  >
                    <svg
                      height="16"
                      title="plus-expand"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <line
                        stroke="black"
                        stroke-width="1.5"
                        x1="8"
                        x2="16"
                        y1="8"
                        y2="8"
                      />
                      <line
                        stroke="black"
                        stroke-width="1.5"
                        x1="12"
                        x2="12"
                        y1="4"
                        y2="12"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="headline-dashplus"
          >
            <svg
              height="16"
              title="dash-collapse"
              width="16"
            >
              <line
                stroke="black"
                stroke-width="1.5"
                x1="8"
                x2="16"
                y1="8"
                y2="8"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    aria-label="Add"
    class="mdc-fab"
    title="Add"
  >
    <i
      class="mdc-fab__icon material-icons mdc-fab-icon"
    >
      add
    </i>
  </button>
  <div
    class="mdc-bottom-app-bar__fab mdc-bottom-app-bar__fab--center-cut mdc-fab material-icons"
  />
  <div
    class="mdc-bottom-app-bar__row"
  >
    <div
      class="mdc-bottom-app-bar__section mdc-bottom-app-bar__section--space-around"
    >
      <div>
        <i
          aria-label="Menu"
          class="material-icons mdc-bottom-app-bar-icon"
          title="toggle-file-explorer"
        >
          menu
        </i>
      </div>
      <div>
        <i
          class="material-icons mdc-bottom-app-bar-icon"
        >
          search
        </i>
      </div>
      <div>
        <i
          class="material-icons mdc-bottom-app-bar-icon"
        >
          calendar_today
        </i>
      </div>
      <div>
        <i
          class="material-icons mdc-bottom-app-bar-icon"
          title="SettingsIcon"
        >
          settings
        </i>
      </div>
      <div
        class="mdc-bottom-app-bar-text"
        data-testid="filename-titlebar"
      >
        test1
      </div>
    </div>
  </div>
</div>
`;
